# sram22

./: .gitignore  .gitmodules  Cargo.bwrc.toml  Cargo.toml  LICENSE  Makefile  README.md  buf.gen.yaml  design_rules.txt  tmp.txt  view.sh
edatool/: Cargo.toml  build.rs
edatool/src/: lib.rs
edatool/src/error/: mod.rs
edatool/src/lvs/: mod.rs
edatool/src/plugins/: mod.rs
edatool/src/protos/: edatool.lvs.v1.rs  edatool.sim.v1.rs  mod.rs
edatool/src/sim/: analysis.rs  mod.rs  testbench.rs  waveform.rs
pdkprims/: Cargo.toml
pdkprims/src/: config.rs  contact.rs  gds.rs  geometry.rs  lib.rs  mos.rs
pdkprims/src/tech/: mod.rs
sram22/: Cargo.toml  build.rs
sram22/lib/openram/: sram_1rw_32x256_8.spice
sram22/lib/sram_sp_cell/: sky130_fd_bd_sram__sram_sp_cell.mag  sky130_fd_bd_sram__sram_sp_cell.magic.lef
sram22/lib/sram_sp_cell_opt1a/: sky130_fd_bd_sram__sram_sp_cell_opt1a.gds  sky130_fd_bd_sram__sram_sp_cell_opt1a.mag  sky130_fd_bd_sram__sram_sp_cell_opt1a.maglef
sram22/lib/sram_sp_cell_replica/: sky130_fd_bd_sram__openram_sp_cell_opt1_replica.gds.pins  sky130_fd_bd_sram__openram_sp_cell_opt1_replica.spice
sram22/lib/sramgen_control/: sramgen_control_replica_v1.lvs.spice
sram22/lib/sramgen_sp_sense_amp/: AAA_Comp_SA_sense.spice  sramgen_sp_sense_amp.spice
sram22/src/: abs.rs  config.rs  error.rs  lib.rs  liberate.rs  main.rs  names.rs
sram22/src/backend/: spice.rs
sram22/src/bitcells/: mod.rs
sram22/src/cells/: mod.rs
sram22/src/cli/: args.rs
sram22/src/config/: mod.rs
sram22/src/decode/: mod.rs
sram22/src/factory/: mod.rs
sram22/src/layout/: bus.rs  cell.rs  grid.rs  mod.rs
sram22/src/plan/: mod.rs
sram22/src/precharge/: layout.rs  mod.rs
sram22/src/predecode/: mod.rs  predecode_3_8.rs
sram22/src/verification/: mod.rs
sram22/src/verilog/: mod.rs
sram22/templates/: delay_line.v  run_sim.sh  sram_1rw.v  sram_1rw_wmask.v  tdc.v
sram22/testbenches/bitcell_rw/: bitcell_rw.spice
sram22/testbenches/column_mux_4/: column_mux_4.spice
sram22/testbenches/control2/: control.spice
sram22/testbenches/control_replica_v1/: control.spice
sram22/testbenches/control_simple/: control.py
sram22/testbenches/control_tmc/: control.py
sram22/testbenches/dbdr_delay_cell_delay/: delay.py
sram22/testbenches/decoder_128/: decoder_128.py  decoder_128.spice
sram22/testbenches/decoder_16/: decoder_16.spice
sram22/testbenches/delay_chain/: delay_chain.spice
sram22/testbenches/edge_detector/: edge_detector.py  edge_detector.spice
sram22/testbenches/openram/: openram.py  openram.spice
sram22/testbenches/sense_amp/: sense_amp_tran_sae.spice
sram22/testbenches/sr_latch/: sr_latch.py
sram22/testbenches/sram_16x16m2/: read.spice
sram22/testbenches/sram_sp_cell/: wl_capex.py  wl_capex.spice
sram22/testbenches/timing_multiplier/: delay_unit.py  delay_unit.spice
sramgen/: Cargo.toml  erc.rep  test.py
sramgen/lib/dbdr_delay_cell/: dbdr_delay_cell.spice
sramgen/lib/openram_dff/: openram_dff.spice
sramgen/lib/spectre_include/: header.sp
sramgen/lib/sram_sp_cell/: sky130_fd_bd_sram__sram_sp_cell.gds  sky130_fd_bd_sram__sram_sp_cell.lvs.spice  sky130_fd_bd_sram__sram_sp_cell.maglef  sky130_fd_bd_sram__sram_sp_cell.spice
sramgen/lib/sram_sp_cell_opt1a/: sky130_fd_bd_sram__sram_sp_cell_opt1a.gds.pins  sky130_fd_bd_sram__sram_sp_cell_opt1a.lvs.calibre.spice  sky130_fd_bd_sram__sram_sp_cell_opt1a.lvs.spice  sky130_fd_bd_sram__sram_sp_cell_opt1a.magic.lef  sky130_fd_bd_sram__sram_sp_cell_opt1a.spice
sramgen/lib/sram_sp_cell_replica/: sky130_fd_bd_sram__openram_sp_cell_opt1_replica.lvs.calibre.spice  sky130_fd_bd_sram__openram_sp_cell_opt1_replica.lvs.spice  sky130_fd_bd_sram__openram_sp_cell_opt1_replica.mag  sky130_fd_bd_sram__openram_sp_cell_opt1_replica.magic.lef  sky130_fd_bd_sram__openram_sp_cell_opt1_replica.maglef  sky130_fd_bd_sram__openram_sp_cell_opt1_replica.spice
sramgen/lib/sram_sp_replica_cell/: sram_sp_replica_cell.lvs.spice  sram_sp_replica_cell.spice
sramgen/lib/sramgen_control/: sramgen_control.spice  sramgen_control_replica_v1.lvs.spice  sramgen_control_replica_v1.spice  sramgen_control_replica_v2.spice  sramgen_control_simple.spice
sramgen/lib/sramgen_sp_sense_amp/: source.added  sramgen_sp_sense_amp.sp  sramgen_sp_sense_amp.spice
sramgen/lib/timing_multiplier/: timing_multiplier.spice
sramgen/scripts/: decoder_outputs.py  generate.py
sramgen/src/: abs.rs  bitcells.rs  col_inv.rs  config.rs  decoder.rs  dff.rs  dout_buffer.rs  gate.rs  lib.rs  liberate.rs  main.rs  mos.rs  mux.rs  netlist.rs  paths.rs  plan.rs  precharge.rs  rbl.rs  sense_amp.rs  sram.rs  utils.rs  wl_driver.rs  wmask_control.rs  write_driver.rs
sramgen/src/cli/: args.rs  mod.rs  progress.rs
sramgen/src/config/: bitcell_array.rs  col_inv.rs  decoder.rs  dff.rs  dout_buffer.rs  gate.rs  guard_ring.rs  inv_chain.rs  mod.rs  mux.rs  precharge.rs  rbl.rs  sense_amp.rs  sram.rs  tmc.rs  wl_driver.rs  wmask_control.rs
sramgen/src/integrations/: mod.rs
sramgen/src/layout/: array.rs  bank.rs  col_inv.rs  common.rs  control.rs  decoder.rs  dff.rs  dout_buffer.rs  gate.rs  grid.rs  inv_chain.rs  latch.rs  mod.rs  mux.rs  precharge.rs  rows.rs  sense_amp.rs  sram.rs  tmc.rs  wmask_control.rs
sramgen/src/mux/: read.rs  write.rs
sramgen/src/plan/: extract.rs  mod.rs
sramgen/src/schematic/: bitcell_array.rs  col_inv.rs  conns.rs  decoder.rs  dff.rs  dout_buffer.rs  edge_detector.rs  gate.rs  inv_chain.rs  latch.rs  mod.rs  mos.rs  precharge.rs  rbl.rs  sense_amp.rs  sram.rs  vlsir_api.rs  wl_driver.rs  wmask_control.rs  write_driver.rs
sramgen/src/tech/: mod.rs  sky130.rs
sramgen/src/tests/: array.rs  bank.rs  bitcells.rs  col_inv.rs  control.rs  decoder.rs  dff.rs  dout_buffer.rs  edge_detector.rs  gate.rs  guard_ring.rs  inv_chain.rs  latch.rs  mod.rs  mux.rs  power.rs  precharge.rs  rbl.rs  sense_amp.rs  sram.rs  sram2.rs  tmc.rs  wl_driver.rs  wmask_control.rs
sramgen/src/v2/: mod.rs  senseamp.rs
sramgen/templates/: run_sim.sh  sram_1rw.v  sram_1rw_wmask.v
sramgen/testbenches/: decoder_16.py  decoder_16.spice
(+437 files in other folders)
