[package]
name = "sram22"
version = "0.2.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>", "Rohan Kumar <rohankumar@berkeley.edu>"]
description = "A configurable SRAM generator"
repository = "https://github.com/rahulk29/sram22"
license = "BSD-3-Clause"

[dependencies]
derive_builder = "0.12"
grid = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
toml = "0.5"
log = "0.4"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
itertools = "0.10"
psfparser = { git = "https://github.com/rahulk29/psfparser.git", branch = "master" }
arcstr = "1"
anyhow = "1"
tera = "1"
lazy_static = "1"
colored = "2"
approx = "0.5"
lef21 = { git = "https://github.com/dan-fritchman/Layout21.git", branch = "main" }

# Substrate dependencies
substrate = { git = "https://github.com/substrate-labs/substrate", branch = "main" }
subgeom = { git = "https://github.com/substrate-labs/substrate", branch = "main" }
codegen = { git = "https://github.com/substrate-labs/substrate", branch = "main" }
sky130_open_pdk = { git = "https://github.com/substrate-labs/substrate", branch = "main" }
ngspice = { git = "https://github.com/substrate-labs/substrate", branch = "main" }
rust_decimal = "1"
rust_decimal_macros = "1"

[dev-dependencies]
tempfile = "3"
paste = "1"

[features]
commercial = []
default = []

