[package]
name = "edatool"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "Rust interfaces to EDA tools for circuit design"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
magic_vlsi = { path = "../magic_vlsi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
handlebars = "4.2"
portpicker = "0.1"
prost = "0.9"
bytes = "1.1"

[build-dependencies]
prost-build = "0.9"

[dev-dependencies]
tempfile = "3.3"
approx = "0.5"

[features]
default = ["open_source"]
netgen_lvs = []
magic_drc = []
magic_pex = []
calibre_lvs = []
calibre_drc = []
ngspice_sim = []
open_source = ["netgen_lvs", "magic_drc", "magic_pex", "ngspice_sim"]
mentor = ["calibre_lvs", "calibre_drc"]
