[package]
name = "edatool"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "Rust interfaces to EDA tools for circuit design"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
magic_vlsi = { path = "../magic_vlsi" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
handlebars = "4.3.0"
portpicker = "0.1.1"
prost = "0.10.4"
prost-types = "0.10.1"
bytes = "1.1.0"

[build-dependencies]
prost-build = "0.10.4"

[dev-dependencies]
tempfile = "3.3.0"
approx = "0.5.1"

[features]
default = ["open_source"]
netgen_lvs = []
magic_drc = []
magic_pex = []
calibre_lvs = []
calibre_drc = []
ngspice_sim = []
open_source = ["netgen_lvs", "magic_drc", "magic_pex", "ngspice_sim"]
mentor = ["calibre_lvs", "calibre_drc"]
