[package]
name = "pdkprims"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
derive_builder = "0.11"
arcstr = "1.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5.9"
layout21 = { path = "../deps/Layout21/layout21" }

[features]
sky130 = []
default = ["sky130"]
