[package]
name = "pdkprims"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
derive_builder = "0.11.2"
arcstr = "1.1.4"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
toml = "0.5.9"
layout21 = { path = "../deps/Layout21/layout21" }

[features]
sky130 = []
default = ["sky130"]
