[package]
name = "sram22"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "A configurable SRAM generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = { version = "*" }
thiserror = "1.0"
magic_vlsi = { path = "../magic_vlsi" }
micro_hdl = { path = "../micro_hdl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
log = "0.4"
env_logger = "0.9"
indicatif = "0.16"
clap = { version = "3.1.0", features = ["derive"] }
itertools = "0.10.3"
handlebars = "4.2"
portpicker = "0.1"
prost = "0.9"
bytes = "1.1"

[build-dependencies]
prost-build = "0.9"

[dev-dependencies]
tempfile = "3.3"
approx = "0.5"

[features]
default = ["open_source"]
netgen_lvs = []
magic_drc = []
magic_pex = []
calibre_lvs = []
calibre_drc = []
ngspice_sim = []
open_source = ["netgen_lvs", "magic_drc", "magic_pex", "ngspice_sim"]
mentor = ["calibre_lvs", "calibre_drc"]
