[package]
name = "sramgen"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "A configurable SRAM generator"
license-file = "../LICENSE"

[dependencies]
derive_builder = "0.12.0"
grid = "0.9.0"
thiserror = "1.0.37"
fanout = { path = "../fanout" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.9"
log = "0.4.17"
indicatif = "0.17.2"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
psfparser = { git = "https://github.com/rahulk29/psfparser.git", branch = "master" }
arcstr = "1.1.5"
anyhow = "1"
calibre = { git = "ssh://git@bwrcrepo.eecs.berkeley.edu/rahulkumar/calibre.git", branch = "master", optional = true }
abstract_lef = { git = "ssh://git@bwrcrepo.eecs.berkeley.edu/rahulkumar/abstract_lef.git", branch = "master", optional = true }
liberate_mx = { git = "https://github.com/rahulk29/liberate-mx.git", branch = "master", optional = true }
tera = "1.17.1"
lazy_static = "1.4.0"
colored = "2.0.0"
substrate = { path = "../../substrate/substrate" }
subgeom = { path = "../../substrate/libs/subgeom" }
codegen = { path = "../../substrate/codegen" }
sky130_open_pdk = { path = "../../substrate/pdks/sky130_open_pdk" }
sky130_commercial_pdk = { path = "../../substrate/pdks/sky130_commercial_pdk" }
ngspice = { path = "../../substrate/plugins/ngspice" }
spectre = { path = "../../substrate/plugins/spectre", optional = true }
sub_calibre = { path = "../../substrate_mentor_plugins/sub_calibre" }

[dev-dependencies]
tempfile = "3.3.0"
approx = "0.5.1"
paste = "1.0"

[features]
commercial = ["dep:calibre", "dep:abstract_lef", "dep:liberate_mx", "dep:spectre"]

default = []
